--- a/portfolio.html
+++ b/portfolio.html
@@ -13,10 +13,13 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
+
   <body>
     <header class="header">
       <nav class="header-navigation">
-        <a class="header-logo link" href="./index.html">WebStudio</a>
+        <a class="header-logo link" href="./index.html"
+          >Web <span class="span-studio">Studio</span></a
+        >
         <ul class="header-list list">
           <li class="header-item">
             <a class="header-link link" href="">Studio</a>
@@ -56,47 +59,47 @@
       <section>
         <ul class="row list">
           <li class="row-list">
-            <img src="./images/img (4).jpg" alt="banking" />
+            <img src="./images/img(4).jpg" alt="banking" />
             <h2 class="horo-row">Banking App Interface Concept</h2>
             <p class="bottom-row">App</p>
           </li>
           <li class="row-list">
-            <img src="./images/img (2) (1).jpg" alt="cashless" />
+            <img src="./images/img(2)(1).jpg" alt="cashless" />
             <h2 class="horo-row">Cashless Payment</h2>
             <p class="bottom-row">Marketing</p>
           </li>
           <li class="row-list">
-            <img src="./images/img (3) (2).jpg" alt="meditation" />
+            <img src="./images/img(3)(2).jpg" alt="meditation" />
             <h2 class="horo-row">Meditation App</h2>
             <p class="bottom-row">App</p>
           </li>
           <li class="row-list">
-            <img src="./images/img (5).jpg" alt="taxi" />
+            <img src="./images/img(5).jpg" alt="taxi" />
             <h2 class="horo-row">Taxi Service</h2>
             <p class="bottom-row">Marketing</p>
           </li>
           <li class="row-list">
-            <img src="./images/img (2) (2).jpg" alt="screen" />
+            <img src="./images/img(2)(2).jpg" alt="screen" />
             <h2 class="horo-row">Screen Illustrations</h2>
             <p class="bottom-row">Design</p>
           </li>
           <li class="row-list">
-            <img src="./images/img (3) (3).jpg" alt="online" />
+            <img src="./images/img(3)(3).jpg" alt="online" />
             <h2 class="horo-row">Online Courses</h2>
             <p class="bottom-row">Marketing</p>
           </li>
           <li class="row-list">
-            <img src="./images/img (6).jpg" alt="instagram" />
+            <img src="./images/img(6).jpg" alt="instagram" />
             <h2 class="horo-row">Instagram Stories Concept</h2>
             <p class="bottom-row">Design</p>
           </li>
           <li class="row-list">
-            <img src="./images/img (2) (3).jpg" alt="organic" />
+            <img src="./images/img(2)(3).jpg" alt="organic" />
             <h2 class="horo-row">Organic Food</h2>
             <p class="bottom-row">Web Site</p>
           </li>
           <li class="row-list">
-            <img src="./images/img (3) (4).jpg" alt="fresh" />
+            <img src="./images/img(3)(4).jpg" alt="fresh" />
             <h2 class="horo-row">Fresh Coffee</h2>
             <p class="bottom-row">Web Site</p>
           </li>
@@ -104,7 +107,9 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html">WebStudio</a>
+      <a class="header-logo link" href="./index.html"
+        >Web <span class="span-studio">Studio</span></a
+      >
       <p class="footer-information">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
