--- a/portfolio.html
+++ b/portfolio.html
@@ -49,12 +49,19 @@
       </address>
     </header>
     <main>
-      <section class="button">
-        <button class="button-list-one" type="button">All</button>
-        <button class="button-list-tow" type="button">Web Site</button>
-        <button class="button-list-tow" type="button">App</button>
-        <button class="button-list-tow" type="button">Design</button>
-        <button class="button-list-tow" type="button">Marketing</button>
+      <h2 class="visually-hidden">Worktwo</h2>
+      <section class="button list">
+        <ul>
+          <li><button class="button-list-one" type="button">All</button></li>
+          <li>
+            <button class="button-list-tow" type="button">Web Site</button>
+          </li>
+          <li><button class="button-list-tow" type="button">App</button></li>
+          <li><button class="button-list-tow" type="button">Design</button></li>
+          <li>
+            <button class="button-list-tow" type="button">Marketing</button>
+          </li>
+        </ul>
       </section>
       <section>
         <ul class="row list">
