goit-markup-homew-02

--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
             <a class="header-link link" href="">Studio</a>
           </li>
           <li class="header-item">
-            <a class="header-link link" href="">Portfolio</a>
+            <a class="header-link link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="header-item">
             <a class="header-link link" href="">Contacts</a>
@@ -49,10 +49,10 @@
       </address>
     </header>
     <main>
-      <h1 class="visually-hidden">Worktwo</h1>
+      <h1 hidden class="visually-hidden">Worktwo</h1>
       <section class="button list">
-        <ul>
-          <li><button class="button-list-one" type="button">All</button></li>
+        <ul class="list">
+          <li><button class="button-list-tow" type="button">All</button></li>
           <li>
             <button class="button-list-tow" type="button">Web Site</button>
           </li>
