--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Studio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -49,7 +49,7 @@
       </address>
     </header>
     <main>
-      <h1 hidden class="visually-hidden">Worktwo</h1>
+      <h1 hidden>Worktwo</h1>
       <section class="button list">
         <ul class="list">
           <li><button class="button-list-tow" type="button">All</button></li>
