--- a/index.html
+++ b/index.html
@@ -16,16 +16,18 @@
   <body>
     <header class="header">
       <nav class="header-navigation">
-        <a class="header-logo link" href="./index.html">WebStudio</a>
+        <a class="header-logo link" href="./index.html"
+          >Web<span class="span-studio-one">Studio</span></a
+        >
         <ul class="header-list list">
           <li class="header-item">
-            <a class="header-link link" href="">Studio</a>
+            <a class="header-link link" href="./index.html">Studio</a>
           </li>
           <li class="header-item">
-            <a class="header-link link" href="">Portfolio</a>
+            <a class="header-link link" href="./index.html">Portfolio</a>
           </li>
           <li class="header-item">
-            <a class="header-link link" href="">Contacts</a>
+            <a class="header-link link" href="./index.html">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -159,7 +161,7 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html">WebStudio</a>
+      <a href="./index.html">Web<span class="span-studio">Studio</span></a>
       <p class="footer-information">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
