--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
     <header class="header">
       <nav class="header-navigation">
         <a class="header-logo link" href="./index.html"
-          >Web <span class="span-studio">Studio</span></a
+          >Web<span class="span-studio-one">Studio</span></a
         >
         <ul class="header-list list">
           <li class="header-item">
@@ -49,8 +49,8 @@
       </address>
     </header>
     <main>
-      <h1 hidden>Worktwo</h1>
       <section class="button list">
+        <h1 hidden>Worktwo</h1>
         <ul class="list">
           <li><button class="button-list-tow" type="button">All</button></li>
           <li>
@@ -114,7 +114,7 @@
     </main>
     <footer class="footer">
       <a class="header-logo link" href="./index.html"
-        >Web <span class="span-studio">Studio</span></a
+        >Web<span class="span-studio">Studio</span></a
       >
       <p class="footer-information">
         Increase the flow of customers and sales for your business with digital
