goit-markup-homew-02

--- a/portfolio.html
+++ b/portfolio.html
@@ -22,13 +22,13 @@
         >
         <ul class="header-list list">
           <li class="header-item">
-            <a class="header-link link" href="">Studio</a>
+            <a class="header-link link" href="./portfolio.html">Studio</a>
           </li>
           <li class="header-item">
             <a class="header-link link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="header-item">
-            <a class="header-link link" href="">Contacts</a>
+            <a class="header-link link" href="./portfolio.html">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -64,7 +64,7 @@
         </ul>
 
         <ul class="row list">
-          <li class="row-list">
+          <li class="row-list link">
             <img src="./images/img(4).jpg" alt="banking" />
             <h2 class="horo-row">Banking App Interface Concept</h2>
             <p class="bottom-row">App</p>
