--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <button class="hero-button" type="button">Order Service</button>
       </section>
       <section class="about">
-        <h2 class="visually-hidden">Work</h2>
+        <h2 class="visually-hidden hidden">Work</h2>
         <ul class="section-two list">
           <li class="about-list">
             <h3 class="about-name">Strategy</h3>
@@ -161,7 +161,9 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html">Web<span class="span-studio">Studio</span></a>
+      <a class="header-logo link" href="./index.html"
+        >Web<span class="span-studio">Studio</span></a
+      >
       <p class="footer-information">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
