goit-markup-homew-02

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
             <a class="header-link link" href="./index.html">Studio</a>
           </li>
           <li class="header-item">
-            <a class="header-link link" href="./index.html">Portfolio</a>
+            <a class="header-link link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="header-item">
-            <a class="header-link link" href="./index.html">Contacts</a>
+            <a class="header-link link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -53,7 +53,7 @@
         <button class="hero-button" type="button">Order Service</button>
       </section>
       <section class="about">
-        <h2 class="visually-hidden hidden">Work</h2>
+        <h2 class="visually-hidden" hidden>Work</h2>
         <ul class="section-two list">
           <li class="about-list">
             <h3 class="about-name">Strategy</h3>
