--- a/portfolio.html
+++ b/portfolio.html
@@ -22,10 +22,10 @@
         >
         <ul class="header-list list">
           <li class="header-item">
-            <a class="header-link link" href="./portfolio.html">Studio</a>
+            <a class="header-link link" href="./index.html">Studio</a>
           </li>
           <li class="header-item">
-            <a class="header-link link" href="./portfolio.html">Portfolio</a>
+            <a class="header-link link" href="">Portfolio</a>
           </li>
           <li class="header-item">
             <a class="header-link link" href="./portfolio.html">Contacts</a>
@@ -65,9 +65,11 @@
 
         <ul class="row list">
           <li class="row-list link">
-            <img src="./images/img(4).jpg" alt="banking" />
-            <h2 class="horo-row">Banking App Interface Concept</h2>
-            <p class="bottom-row">App</p>
+            <a href=""
+              ><img src="./images/img(4).jpg" alt="banking" />
+              <h2 class="horo-row">Banking App Interface Concept</h2>
+              <p class="bottom-row">App</p></a
+            >
           </li>
           <li class="row-list">
             <img src="./images/img(2)(1).jpg" alt="cashless" />
