goit-markup-homew-02

--- a/portfolio.html
+++ b/portfolio.html
@@ -52,14 +52,22 @@
       <section class="button list">
         <h1 hidden>Worktwo</h1>
         <ul class="list">
-          <li><button class="button-list-tow" type="button">All</button></li>
           <li>
-            <button class="button-list-tow" type="button">Web Site</button>
+            <button class="button-list-tow link" type="button">All</button>
           </li>
-          <li><button class="button-list-tow" type="button">App</button></li>
-          <li><button class="button-list-tow" type="button">Design</button></li>
           <li>
-            <button class="button-list-tow" type="button">Marketing</button>
+            <button class="button-list-tow link" type="button">Web Site</button>
+          </li>
+          <li>
+            <button class="button-list-tow link" type="button">App</button>
+          </li>
+          <li>
+            <button class="button-list-tow link" type="button">Design</button>
+          </li>
+          <li>
+            <button class="button-list-tow link" type="button">
+              Marketing
+            </button>
           </li>
         </ul>
 
