goit-markup-homew-02

--- a/portfolio.html
+++ b/portfolio.html
@@ -74,63 +74,63 @@
         <ul class="row list">
           <li class="row-list link">
             <a class="link" href=""
-              ><img src="./images/img(4).jpg" alt="banking" />
+              ><img src="./images/img4.jpg" alt="banking" />
               <h2 class="horo-row">Banking App Interface Concept</h2>
               <p class="bottom-row">App</p></a
             >
           </li>
           <li class="row-list link">
-            <a href=""
-              ><img src="./images/img(2)(1).jpg" alt="cashless" />
+            <a class="link" href=""
+              ><img src="./images/img21.jpg" alt="cashless" />
               <h2 class="horo-row">Cashless Payment</h2>
               <p class="bottom-row">Marketing</p></a
             >
           </li>
           <li class="row-list link">
-            <a href="">
-              <img src="./images/img(3)(2).jpg" alt="meditation" />
+            <a class="link" href="">
+              <img src="./images/img32.jpg" alt="meditation" />
               <h2 class="horo-row">Meditation App</h2>
               <p class="bottom-row">App</p></a
             >
           </li>
           <li class="row-list link">
-            <a href="">
-              <img src="./images/img(5).jpg" alt="taxi" />
+            <a class="link" href="">
+              <img src="./images/img5.jpg" alt="taxi" />
               <h2 class="horo-row">Taxi Service</h2>
               <p class="bottom-row">Marketing</p></a
             >
           </li>
           <li class="row-list link">
-            <a href="">
-              <img src="./images/img(2)(2).jpg" alt="screen" />
+            <a class="link" href="">
+              <img src="./images/img22.jpg" alt="screen" />
               <h2 class="horo-row">Screen Illustrations</h2>
               <p class="bottom-row">Design</p></a
             >
           </li>
           <li class="row-list link">
-            <a href="">
-              <img src="./images/img(3)(3).jpg" alt="online" />
+            <a class="link" href="">
+              <img src="./images/img33.jpg" alt="online" />
               <h2 class="horo-row">Online Courses</h2>
               <p class="bottom-row">Marketing</p></a
             >
           </li>
           <li class="row-list link">
-            <a href=""
-              ><img src="./images/img(6).jpg" alt="instagram" />
+            <a class="link" href=""
+              ><img src="./images/img6.jpg" alt="instagram" />
               <h2 class="horo-row">Instagram Stories Concept</h2>
               <p class="bottom-row">Design</p></a
             >
           </li>
           <li class="row-list link">
-            <a href=""
-              ><img src="./images/img(2)(3).jpg" alt="organic" />
+            <a class="link" href=""
+              ><img src="./images/img23.jpg" alt="organic" />
               <h2 class="horo-row">Organic Food</h2>
               <p class="bottom-row">Web Site</p></a
             >
           </li>
           <li class="row-list link">
-            <a href="">
-              <img src="./images/img(3)(4).jpg" alt="fresh" />
+            <a class="link" href="">
+              <img src="./images/img34.jpg" alt="fresh" />
               <h2 class="horo-row">Fresh Coffee</h2>
               <p class="bottom-row">Web Site</p></a
             >
