goit-markup-homew-02

--- a/portfolio.html
+++ b/portfolio.html
@@ -74,7 +74,12 @@
         <ul class="row list">
           <li class="row-list link">
             <a class="link" href=""
-              ><img class="photo360" src="./images/img4.jpg" alt="banking" />
+              ><img
+                class="photo360"
+                src="./images/img4.jpg"
+                alt="banking"
+                width="360px"
+              />
               <h2 class="horo-row">Banking App Interface Concept</h2>
               <p class="bottom-row">App</p></a
             >
