goit-markup-homew-02

--- a/portfolio.html
+++ b/portfolio.html
@@ -86,7 +86,12 @@
           </li>
           <li class="row-list link">
             <a class="link" href=""
-              ><img class="photo360" src="./images/img21.jpg" alt="cashless" />
+              ><img
+                class="photo360"
+                src="./images/img21.jpg"
+                alt="cashless"
+                width="360px"
+              />
               <h2 class="horo-row">Cashless Payment</h2>
               <p class="bottom-row">Marketing</p></a
             >
