goit-markup-homew-02

--- a/portfolio.html
+++ b/portfolio.html
@@ -74,24 +74,14 @@
         <ul class="row list">
           <li class="row-list link">
             <a class="link" href=""
-              ><img
-                class="photo360"
-                src="./images/img4.jpg"
-                alt="banking"
-                width="360px"
-              />
+              ><img class="photo360" src="./images/img4.jpg" alt="banking" />
               <h2 class="horo-row">Banking App Interface Concept</h2>
               <p class="bottom-row">App</p></a
             >
           </li>
           <li class="row-list link">
             <a class="link" href=""
-              ><img
-                class="photo360"
-                src="./images/img21.jpg"
-                alt="cashless"
-                width="360px"
-              />
+              ><img class="photo360" src="./images/img21.jpg" alt="cashless" />
               <h2 class="horo-row">Cashless Payment</h2>
               <p class="bottom-row">Marketing</p></a
             >
