goit-markup-homew-02

--- a/portfolio.html
+++ b/portfolio.html
@@ -98,49 +98,84 @@
           </li>
           <li class="row-list link">
             <a class="link" href="">
-              <img class="photo360" src="./images/img32.jpg" alt="meditation" />
+              <img
+                class="photo360"
+                src="./images/img32.jpg"
+                alt="meditation"
+                width="360"
+              />
               <h2 class="horo-row">Meditation App</h2>
               <p class="bottom-row">App</p></a
             >
           </li>
           <li class="row-list link">
             <a class="link" href="">
-              <img class="photo360" src="./images/img5.jpg" alt="taxi" />
+              <img
+                class="photo360"
+                src="./images/img5.jpg"
+                alt="taxi"
+                width="360"
+              />
               <h2 class="horo-row">Taxi Service</h2>
               <p class="bottom-row">Marketing</p></a
             >
           </li>
           <li class="row-list link">
             <a class="link" href="">
-              <img class="photo360" src="./images/img22.jpg" alt="screen" />
+              <img
+                class="photo360"
+                src="./images/img22.jpg"
+                alt="screen"
+                width="360"
+              />
               <h2 class="horo-row">Screen Illustrations</h2>
               <p class="bottom-row">Design</p></a
             >
           </li>
           <li class="row-list link">
             <a class="link" href="">
-              <img class="photo360" src="./images/img33.jpg" alt="online" />
+              <img
+                class="photo360"
+                src="./images/img33.jpg"
+                alt="online"
+                width="360"
+              />
               <h2 class="horo-row">Online Courses</h2>
               <p class="bottom-row">Marketing</p></a
             >
           </li>
           <li class="row-list link">
             <a class="link" href=""
-              ><img class="photo360" src="./images/img6.jpg" alt="instagram" />
+              ><img
+                class="photo360"
+                src="./images/img6.jpg"
+                alt="instagram"
+                width="360"
+              />
               <h2 class="horo-row">Instagram Stories Concept</h2>
               <p class="bottom-row">Design</p></a
             >
           </li>
           <li class="row-list link">
             <a class="link" href=""
-              ><img class="photo360" src="./images/img23.jpg" alt="organic" />
+              ><img
+                class="photo360"
+                src="./images/img23.jpg"
+                alt="organic"
+                width="360"
+              />
               <h2 class="horo-row">Organic Food</h2>
               <p class="bottom-row">Web Site</p></a
             >
           </li>
           <li class="row-list link">
             <a class="link" href="">
-              <img class="photo360" src="./images/img34.jpg" alt="fresh" />
+              <img
+                class="photo360"
+                src="./images/img34.jpg"
+                alt="fresh"
+                width="360"
+              />
               <h2 class="horo-row">Fresh Coffee</h2>
               <p class="bottom-row">Web Site</p></a
             >
